<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="news"
            type="com.famebuster.data.local.entities.News" />
    </data>
    
    <LinearLayout
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@color/grayish"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="80dp">
                <ImageView
                    bind:celebImage="@{news.celebList.get(0).celebImageUrl}"
                    android:id="@+id/feed_profile_pictures"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/feed_profile_pictures" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_gravity="start"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/feed_celeb_names"
                        android:layout_marginVertical="6dp"
                        android:hint="@string/feed_profile_name"
                        android:text="@{news.celebList.get(0).celebName}"
                        android:textSize="25sp"
                        style="bold"
                        android:layout_gravity="start|top"
                        android:textColor="@color/textPink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_gravity="start|bottom"
                        android:drawablePadding="10dp"
                        android:backgroundTint="@color/locationBlue"
                        android:drawableStart="@drawable/ic_location"
                        android:id="@+id/feed_location"
                        android:hint="@string/feed_location"
                        android:text="@{news.newsPlaceName}"
                        android:textSize="15sp"
                        android:textColor="@color/textGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/feed_date"
                    android:text="@{news.newsAddDate}"
                    android:hint="@string/feed_date"
                    android:layout_gravity="bottom|end"
                    android:textColor="@color/textGray"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </FrameLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                bind:newsImage="@{news.newsImageUrl}"
                android:id="@+id/feed_image"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:contentDescription="@string/feed_image" />
        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/feed_like"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="4dp"
                        android:background="@drawable/like_btn_toggle"
                        android:contentDescription="@string/feed_like"
                        android:text=""
                        android:textSize="0sp" />

                    <ImageButton
                        android:id="@+id/feed_comment"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="4dp"
                        android:background="@drawable/ic_comment"
                        android:contentDescription="@string/feed_comment" />

                    <ToggleButton
                        android:id="@+id/feed_retweet"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="4dp"
                        android:background="@drawable/retweet_btn_toggle"
                        android:contentDescription="@string/feed_retweet"
                        android:text=""
                        android:textSize="0sp" />

                    <ImageButton
                        android:id="@+id/feed_do_comment"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="4dp"
                        android:background="@drawable/ic_right_arrow"
                        android:contentDescription="@string/feed_do_comment" />

                </LinearLayout>

                <TextView
                    android:id="@+id/like_count"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/feed_like_count"
                    android:text="@{@string/likes(news.newsWowCount)}"
                    android:textColor="@color/textGray"
                    android:textSize="16sp"
                    android:layout_gravity="end|bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </FrameLayout>

            <TextView
                android:id="@+id/feed_header"
                android:hint="@string/feed_post_name"
                android:text="@{news.newsHeader}"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:textColor="@color/textBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/feed_detail"
                android:text="@{news.newsDetail}"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/textGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{news.newsLastComment.length() == 0 ? View.GONE : View.VISIBLE}"/>


            <TextView
                android:id="@+id/feed_last_comment"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@{news.newsLastComment}"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{news.newsLastComment.length() == 0 ? View.GONE : View.VISIBLE}"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    bind:userImage="@{news.userImageUrl}"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:contentDescription="@string/feed_user_image" />

                <TextView
                    android:text="@{news.userNickName}"
                    android:layout_gravity="center"
                    android:id="@+id/feed_username"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/clickableBlue"
                    android:textSize="15sp"
                    android:hint="@string/feed_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>
